--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </h2>
         </section>
 
-        <form action="form" class="sign-up">
+        <form class="sign-up">
           <input
             type="text"
             placeholder="First Name"
