--- a/index.html
+++ b/index.html
@@ -92,8 +92,15 @@
 
     <footer id="footer">
       <h4 class="attribution">
-        Challenge by <a href="#">Frontend Mentor.</a> Coded by
-        <a href="#">Joshua Tunnicliffe.</a>
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io/challenges/intro-component-with-signup-form-5cf91bd49edda32581d28fd1/hub/intro-component-with-signup-form-g5TRGSIIY"
+          >Frontend Mentor.</a
+        >
+        Coded by
+        <a href="https://www.frontendmentor.io/profile/JoshuaTunni"
+          >Joshua Tunnicliffe.</a
+        >
       </h4>
     </footer>
 
